Bug 157584 - Accessibility check doesn't move footnote into view if other object is currently selected
Summary: Accessibility check doesn't move footnote into view if other object is curren...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0
Keywords: accessibility, implementationError
Depends on:
Blocks: Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2023-10-03 21:26 UTC by Jim Raykowski
Modified: 2023-10-06 23:45 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file to reproduce bug (35.03 KB, application/vnd.oasis.opendocument.text)
2023-10-03 21:26 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2023-10-03 21:26:25 UTC
Created attachment 189989 [details]
file to reproduce bug

Steps to reproduce using the attached file:

1) Open the Accessibility check sidebar deck (menu > View > Sidebar > Accessibility deck in the sidebar tabbar)
2) Double-click* on "Anchor Frames/Text boxes “As Character“." in the accessibility issues list.
3) Double-click* on "Avoid footnotes."

Results: The frame object remains selected.

Expected Results: The footnote anchor is moved into view and the cursor position is moved to it.

*gtk3 vcl backend only requires single-click
Comment 1 stragu 2023-10-04 14:11:02 UTC
Thanks Jim!
Reproduced in recent trunk build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f95c3994f0b6a82a3bc2ddfb68822b74479ae185
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And in 7.6, since it was implemented with commit a8d357a31055dad9db0311b891687bec1b47f8c9.

But the same happens if other objects are selected, like images or shapes.
And in fact, if you select the object, then scroll away, you'll see that it actually jumps to the selected object.

Possibly related: if some text is selected, clicking on "Avoid footnote" will extend the selection all the way to the footnote anchor.

Balázs, you fixed bug 156094, what do you think?
Comment 2 Jim Raykowski 2023-10-05 00:36:57 UTC
Patchset 3 for enhancement bug 157370 included a fix for this and the text selection bug mentioned by stragu in comment 1. It was removed in in Patchset 4 in favor of a separate patch given here:
https://gerrit.libreoffice.org/c/core/+/157575
Comment 3 Commit Notification 2023-10-06 16:52:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a3c7d25122f615c1e3232e535afef2f8ad33d186

tdf#157584 Fix accessibility check doesn't move footnote into view

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Jim Raykowski 2023-10-06 23:45:10 UTC
Marking as Resolved Fixed.

Thank you Michael Stahl for reviewing the patch.