tdf#157584 Fix accessibility check doesn't move footnote into view

when a frame object is currently selected

This patch introduces the function SwWrtShell::AssureStdMode to fix
this bug and to replace duplicated code.

Change-Id: I4106db983f79c92eea96a67b510393b2ac09a6d4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157575
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>